--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-app-boilerplate",
   "version": "1.0.0",
-  "description": "All React app boilerplates",
+  "description": "one repo to rule all React app boilerplates",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,scss}\"",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "prettier": "^2.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
