--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,scss}\"",
+    "lint": "eslint --fix . && echo 'Lint complete.'",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -20,6 +20,11 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
     "html-webpack-plugin": "^4.3.0",
     "prettier": "^2.0.5",
     "webpack": "^4.43.0",
